feat: support for shared code, simplified dockerfiles

--- a/admin/Dockerfile
+++ b/admin/Dockerfile
@@ -1,18 +1,16 @@
-# TODO: use multi-stage dockerfile also locally?
+# Builder, tester and runtime container for local development
+# NOTE: npm libraries are installed inside container to speed up build
 FROM node:10-alpine
-RUN apk add --update-cache build-base python git
-# Required by the current flow version (can be removed later?)
-RUN apk --no-cache add ca-certificates wget && \
-  wget -q -O /etc/apk/keys/sgerrand.rsa.pub https://alpine-pkgs.sgerrand.com/sgerrand.rsa.pub && \
-  wget https://github.com/sgerrand/alpine-pkg-glibc/releases/download/2.28-r0/glibc-2.28-r0.apk && \
-  apk add glibc-2.28-r0.apk
-WORKDIR /admin
-COPY ./package.json ./package-lock.* ./.flowconfi* /admin/
+ARG SERVICE_DIR=.
+WORKDIR /service
+COPY ${SERVICE_DIR}/package.json \
+     ${SERVICE_DIR}/package-lock.* \
+     ${SERVICE_DIR}/.flowconfi* \
+     /service/
 ENV NODE_ENV development
 ENV API_ROOT ''
 ENV API_URL '/api'
 RUN npm install --loglevel warn
 RUN npm run types-install
-COPY . /admin
 EXPOSE 8080
 CMD npm install; npm run types-install; npm run start
