--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -100,7 +100,7 @@ steps:
 - id: ci-prepare
   waitFor: ['-']
   name: '${_TEMPLATE_DEFAULT_TAITO_IMAGE}'
-  args: ['ci-prepare:server:$BRANCH_NAME', '$COMMIT_SHA', 'eu.gcr.io/$PROJECT_ID/$_REPO_NAME']
+  args: ['ci-prepare:server:$BRANCH_NAME', '$COMMIT_SHA']
   env:
     - taito_mode=ci
     - template_default_taito_image=${_TEMPLATE_DEFAULT_TAITO_IMAGE}
@@ -234,7 +234,7 @@ steps:
 - id: ci-build-admin
   waitFor: ['ci-release-pre']
   name: '${_TEMPLATE_DEFAULT_TAITO_IMAGE}'
-  args: ['ci-build:admin:$BRANCH_NAME', '$COMMIT_SHA', 'eu.gcr.io/$PROJECT_ID/$_REPO_NAME']
+  args: ['ci-build:admin:$BRANCH_NAME', '$COMMIT_SHA']
   env:
     - taito_mode=ci
     - template_default_taito_image=${_TEMPLATE_DEFAULT_TAITO_IMAGE}
@@ -260,7 +260,7 @@ steps:
 - id: ci-push-admin
   waitFor: ['ci-build-admin']
   name: '${_TEMPLATE_DEFAULT_TAITO_IMAGE}'
-  args: ['ci-push:admin:$BRANCH_NAME', '$COMMIT_SHA', 'eu.gcr.io/$PROJECT_ID/$_REPO_NAME']
+  args: ['ci-push:admin:$BRANCH_NAME', '$COMMIT_SHA']
   env:
     - taito_mode=ci
     - template_default_taito_image=${_TEMPLATE_DEFAULT_TAITO_IMAGE}
@@ -286,7 +286,7 @@ steps:
 - id: ci-build-client
   waitFor: ['ci-release-pre']
   name: '${_TEMPLATE_DEFAULT_TAITO_IMAGE}'
-  args: ['ci-build:client:$BRANCH_NAME', '$COMMIT_SHA', 'eu.gcr.io/$PROJECT_ID/$_REPO_NAME']
+  args: ['ci-build:client:$BRANCH_NAME', '$COMMIT_SHA']
   env:
     - taito_mode=ci
     - template_default_taito_image=${_TEMPLATE_DEFAULT_TAITO_IMAGE}
@@ -312,7 +312,7 @@ steps:
 - id: ci-push-client
   waitFor: ['ci-build-client']
   name: '${_TEMPLATE_DEFAULT_TAITO_IMAGE}'
-  args: ['ci-push:client:$BRANCH_NAME', '$COMMIT_SHA', 'eu.gcr.io/$PROJECT_ID/$_REPO_NAME']
+  args: ['ci-push:client:$BRANCH_NAME', '$COMMIT_SHA']
   env:
     - taito_mode=ci
     - template_default_taito_image=${_TEMPLATE_DEFAULT_TAITO_IMAGE}
@@ -338,7 +338,7 @@ steps:
 - id: ci-build-graphql
   waitFor: ['ci-release-pre']
   name: '${_TEMPLATE_DEFAULT_TAITO_IMAGE}'
-  args: ['ci-build:graphql:$BRANCH_NAME', '$COMMIT_SHA', 'eu.gcr.io/$PROJECT_ID/$_REPO_NAME']
+  args: ['ci-build:graphql:$BRANCH_NAME', '$COMMIT_SHA']
   env:
     - taito_mode=ci
     - template_default_taito_image=${_TEMPLATE_DEFAULT_TAITO_IMAGE}
@@ -364,7 +364,7 @@ steps:
 - id: ci-push-graphql
   waitFor: ['ci-build-graphql']
   name: '${_TEMPLATE_DEFAULT_TAITO_IMAGE}'
-  args: ['ci-push:graphql:$BRANCH_NAME', '$COMMIT_SHA', 'eu.gcr.io/$PROJECT_ID/$_REPO_NAME']
+  args: ['ci-push:graphql:$BRANCH_NAME', '$COMMIT_SHA']
   env:
     - taito_mode=ci
     - template_default_taito_image=${_TEMPLATE_DEFAULT_TAITO_IMAGE}
@@ -390,7 +390,7 @@ steps:
 - id: ci-build-server
   waitFor: ['ci-release-pre']
   name: '${_TEMPLATE_DEFAULT_TAITO_IMAGE}'
-  args: ['ci-build:server:$BRANCH_NAME', '$COMMIT_SHA', 'eu.gcr.io/$PROJECT_ID/$_REPO_NAME']
+  args: ['ci-build:server:$BRANCH_NAME', '$COMMIT_SHA']
   env:
     - taito_mode=ci
     - template_default_taito_image=${_TEMPLATE_DEFAULT_TAITO_IMAGE}
@@ -416,7 +416,7 @@ steps:
 - id: ci-push-server
   waitFor: ['ci-build-server']
   name: '${_TEMPLATE_DEFAULT_TAITO_IMAGE}'
-  args: ['ci-push:server:$BRANCH_NAME', '$COMMIT_SHA', 'eu.gcr.io/$PROJECT_ID/$_REPO_NAME']
+  args: ['ci-push:server:$BRANCH_NAME', '$COMMIT_SHA']
   env:
     - taito_mode=ci
     - template_default_taito_image=${_TEMPLATE_DEFAULT_TAITO_IMAGE}
@@ -442,7 +442,7 @@ steps:
 # - id: ci-build-worker
 #   waitFor: ['ci-release-pre']
 #   name: '${_TEMPLATE_DEFAULT_TAITO_IMAGE}'
-#   args: ['ci-build:worker:$BRANCH_NAME', '$COMMIT_SHA', 'eu.gcr.io/$PROJECT_ID/$_REPO_NAME']
+#   args: ['ci-build:worker:$BRANCH_NAME', '$COMMIT_SHA']
 #   env:
 #     - taito_mode=ci
 #     - template_default_taito_image=${_TEMPLATE_DEFAULT_TAITO_IMAGE}
@@ -468,7 +468,7 @@ steps:
 # - id: ci-push-worker
 #   waitFor: ['ci-build-worker']
 #   name: '${_TEMPLATE_DEFAULT_TAITO_IMAGE}'
-#   args: ['ci-push:worker:$BRANCH_NAME', '$COMMIT_SHA', 'eu.gcr.io/$PROJECT_ID/$_REPO_NAME']
+#   args: ['ci-push:worker:$BRANCH_NAME', '$COMMIT_SHA']
 #   env:
 #     - taito_mode=ci
 #     - template_default_taito_image=${_TEMPLATE_DEFAULT_TAITO_IMAGE}
@@ -494,7 +494,7 @@ steps:
 # - id: ci-build-www
 #   waitFor: ['ci-release-pre']
 #   name: '${_TEMPLATE_DEFAULT_TAITO_IMAGE}'
-#   args: ['ci-build:www:$BRANCH_NAME', '$COMMIT_SHA', 'eu.gcr.io/$PROJECT_ID/$_REPO_NAME']
+#   args: ['ci-build:www:$BRANCH_NAME', '$COMMIT_SHA']
 #   env:
 #     - taito_mode=ci
 #     - template_default_taito_image=${_TEMPLATE_DEFAULT_TAITO_IMAGE}
@@ -520,7 +520,7 @@ steps:
 # - id: ci-push-www
 #   waitFor: ['ci-build-www']
 #   name: '${_TEMPLATE_DEFAULT_TAITO_IMAGE}'
-#   args: ['ci-push:www:$BRANCH_NAME', '$COMMIT_SHA', 'eu.gcr.io/$PROJECT_ID/$_REPO_NAME']
+#   args: ['ci-push:www:$BRANCH_NAME', '$COMMIT_SHA']
 #   env:
 #     - taito_mode=ci
 #     - template_default_taito_image=${_TEMPLATE_DEFAULT_TAITO_IMAGE}
