--- a/server/Dockerfile.build
+++ b/server/Dockerfile.build
@@ -1,21 +1,19 @@
 # Builder and tester container for production build
 FROM node:10-alpine as builder
+ARG SERVICE_DIR=.
 ARG TARGET_ENV=prod
-RUN apk add --update-cache build-base python git fontconfig
-# Required by the current flow version (can be removed later?)
-RUN apk --no-cache add ca-certificates wget && \
-  wget -q -O /etc/apk/keys/sgerrand.rsa.pub https://alpine-pkgs.sgerrand.com/sgerrand.rsa.pub && \
-  wget https://github.com/sgerrand/alpine-pkg-glibc/releases/download/2.28-r0/glibc-2.28-r0.apk && \
-  apk add glibc-2.28-r0.apk
-WORKDIR /server
-COPY ./package.json ./package-lock.* ./.flowconfi* /server/
+WORKDIR /service
+COPY ${SERVICE_DIR}/package.json \
+     ${SERVICE_DIR}/package-lock.* \
+     ${SERVICE_DIR}/.flowconfi* \
+     /service/
 ENV TARGET_ENV ${TARGET_ENV}
 ENV NODE_ENV development
 RUN npm ci --loglevel warn
-# RUN npm run types-install
-COPY . /server
+RUN npm run types-install
+COPY ${SERVICE_DIR} /service
 RUN npm run lint
-# RUN npm run types
+RUN npm run types
 RUN npm run unit
 RUN npm run build:prod
 
@@ -30,8 +28,9 @@ ENV BUILD_VERSION ${BUILD_VERSION}
 ENV NODE_ENV production
 WORKDIR /build
 COPY --from=builder /build .
-COPY --from=builder /server/package.json .
-COPY --from=builder /server/node_modules ./node_modules
+COPY --from=builder /service/package.json .
+COPY --from=builder /service/package-lock.json .
+COPY --from=builder /service/node_modules ./node_modules
 
 # Delete development libraries and create node user if it doesn't exist
 RUN npm prune --production && \
