--- a/worker/Dockerfile.build
+++ b/worker/Dockerfile.build
@@ -1,20 +1,23 @@
 # Builder and tester container for production build
 FROM node:10-alpine as builder
+ARG SERVICE_DIR=.
 ARG TARGET_ENV=prod
-RUN apk add --update-cache build-base python git fontconfig
-WORKDIR /worker
-COPY ./package.json ./package-lock.* ./.flowconfi* /worker/
+WORKDIR /service
+COPY ${SERVICE_DIR}/package.json \
+     ${SERVICE_DIR}/package-lock.* \
+     ${SERVICE_DIR}/.flowconfi* \
+     /service/
 ENV TARGET_ENV ${TARGET_ENV}
 ENV NODE_ENV development
 RUN npm ci --loglevel warn
 RUN npm run types-install
-COPY . /worker
+COPY ${SERVICE_DIR} /service
 RUN npm run lint
 RUN npm run types
 RUN npm run unit
 RUN npm run build:prod
 
-# Production runtime
+# Production runtime container
 FROM node:10-alpine
 ARG BUILD_VERSION
 LABEL version=${BUILD_VERSION} \
@@ -25,14 +28,17 @@ ENV BUILD_VERSION ${BUILD_VERSION}
 ENV NODE_ENV production
 WORKDIR /build
 COPY --from=builder /build .
-COPY --from=builder /worker/package.json .
-COPY --from=builder /worker/node_modules ./node_modules
+COPY --from=builder /service/package.json .
+COPY --from=builder /service/package-lock.json .
+COPY --from=builder /service/node_modules ./node_modules
+
 # Delete development libraries and create node user if it doesn't exist
 RUN npm prune --production && \
     addgroup -S -g 74839 node || \
     adduser -S -u 74276 -s /bin/false node || \
     addgroup node node || \
     su node -s /bin/sh -c "node --version"
+
 USER node
 EXPOSE 8080
 # TODO dump-init or tiny as init system? Kubernetes uses --init?
