chore: improve server structure, update some libs

--- a/server/package.json
+++ b/server/package.json
@@ -15,9 +15,9 @@
     "build:prod": "NODE_ENV=production babel -d ../build --ignore node_modules ."
   },
   "dependencies": {
-    "@babel/polyfill": "^7.0.0",
-    "@babel/runtime": "^7.0.0",
-    "boom": "^7.2.0",
+    "@babel/polyfill": "^7.2.5",
+    "@babel/runtime": "^7.2.0",
+    "boom": "^7.3.0",
     "bunyan": "~1.8.12",
     "continuation-local-storage": "~3.2.1",
     "koa": "^2.6.2",
@@ -25,30 +25,30 @@
     "koa-cache-control": "~2.0.0",
     "koa-router": "^7.4.0",
     "lodash": "~4.17.10",
-    "pg-promise": "^8.5.2",
+    "pg-promise": "^8.5.4",
     "raven": "~2.6.4",
     "request": "~2.88.0",
     "request-promise-native": "~1.0.5",
     "uuid": "~3.3.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.2.0",
+    "@babel/preset-env": "^7.2.3",
     "@babel/register": "^7.0.0",
     "babel-eslint": "^10.0.1",
     "chai": "^4.2.0",
     "chai-as-promised": "~7.1.1",
-    "eslint": "^5.9.0",
+    "eslint": "^5.10.0",
     "eslint-config-airbnb-base": "~13.1.0",
     "eslint-config-prettier": "^3.3.0",
     "eslint-plugin-import": "~2.14.0",
     "eslint-plugin-prettier": "^3.0.0",
     "mocha": "^5.2.0",
-    "nodemon": "~1.18.4",
-    "prettier": "^1.15.2",
+    "nodemon": "^1.18.9",
+    "prettier": "^1.15.3",
     "pretty-quick": "^1.6.0"
   },
   "_flowComment": "NOTE: for flow add also flow-bin, flow-typed and babel-preset-flow"
