--- a/admin/package.json
+++ b/admin/package.json
@@ -16,62 +16,63 @@
       "./config/setup-jest.js"
     ]
   },
-  "_NoteThereWereAdded_Obsolete?": "axios, babel-polyfill, history, immutability-helper, prop-types, redux-actions, qs",
+  "_NOTE_these_were_added": "TODO are these obsolete: axios, babel-polyfill, history, immutability-helper, prop-types, redux-actions, qs",
   "_Note": "unused depencencies bevause admin GUI is still under construction",
   "dependencies": {
-    "@babel/polyfill": "^7.0.0",
-    "@material-ui/core": "^3.6.0",
+    "@babel/polyfill": "^7.2.5",
+    "@material-ui/core": "^3.7.1",
     "@material-ui/icons": "~3.0.1",
     "axios": "~0.18.0",
     "data-generator": "~1.0.0",
     "fakerest": "~2.1.0",
-    "fetch-mock": "^7.2.5",
+    "fetch-mock": "^7.2.7",
     "history": "~4.7.2",
-    "immutability-helper": "^2.8.1",
-    "json-graphql-server": "~2.1.1",
+    "immutability-helper": "^2.9.0",
+    "json-graphql-server": "^2.1.3",
     "prop-types": "~15.6.2",
     "qs": "^6.6.0",
-    "ra-data-fakerest": "^2.4.0",
-    "ra-data-graphql-simple": "^2.4.3",
-    "ra-data-simple-rest": "^2.4.3",
+    "ra-data-fakerest": "^2.5.2",
+    "ra-data-graphql-simple": "^2.5.2",
+    "ra-data-simple-rest": "^2.5.2",
     "ra-input-rich-text": "^2.4.2",
     "ra-language-english": "~2.3.0",
     "ra-language-french": "~2.3.0",
-    "react": "^16.6.3",
-    "react-admin": "^2.4.3",
-    "react-dom": "^16.6.3",
-    "react-redux": "^5.1.1",
+    "react": "^16.7.0",
+    "react-admin": "^2.5.2",
+    "react-dom": "^16.7.0",
+    "react-hot-loader": "^4.6.3",
+    "react-redux": "^6.0.0",
     "react-router-dom": "~4.3.1",
     "react-scripts": "^2.1.1",
     "recompose": "~0.30.0",
     "redux-actions": "~2.6.1",
-    "redux-form": "~7.4.2",
+    "redux-form": "^8.0.4",
     "redux-saga": "~0.16.0",
-    "styled-components": "^4.1.1",
-    "uglifyjs-webpack-plugin": "^2.0.1"
+    "styled-components": "^4.1.3",
+    "uglifyjs-webpack-plugin": "^2.1.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
-    "@babel/plugin-proposal-decorators": "^7.0.0",
-    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
-    "@babel/plugin-proposal-function-sent": "^7.0.0",
-    "@babel/plugin-proposal-json-strings": "^7.0.0",
-    "@babel/plugin-proposal-numeric-separator": "^7.0.0",
-    "@babel/plugin-proposal-throw-expressions": "^7.0.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/plugin-syntax-import-meta": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "@babel/plugin-proposal-decorators": "^7.2.3",
+    "@babel/plugin-proposal-export-namespace-from": "^7.2.0",
+    "@babel/plugin-proposal-function-sent": "^7.2.0",
+    "@babel/plugin-proposal-json-strings": "^7.2.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.2.0",
+    "@babel/plugin-proposal-throw-expressions": "^7.2.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-syntax-import-meta": "^7.2.0",
+    "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.4.2",
     "babel-loader": "^8.0.4",
     "babel-plugin-react-transform": "~3.0.0",
-    "babel-plugin-styled-components": "^1.9.0",
-    "css-loader": "~1.0.0",
-    "eslint": "^5.9.0",
+    "babel-plugin-styled-components": "^1.10.0",
+    "css-loader": "^2.0.2",
+    "eslint": "^5.10.0",
     "eslint-config-airbnb": "~17.1.0",
     "eslint-config-airbnb-base": "~13.1.0",
     "eslint-config-prettier": "^3.3.0",
@@ -81,26 +82,24 @@
     "eslint-plugin-jsx-a11y": "~6.1.1",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "~7.11.1",
-    "file-loader": "~2.0.0",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "~3.2.0",
     "jest": "~23.6.0",
     "json-loader": "~0.5.7",
-    "prettier": "^1.15.2",
+    "prettier": "^1.15.3",
     "pretty-quick": "^1.6.0",
-    "react-hot-loader": "~4.3.6",
-    "redux-devtools": "~3.4.1",
+    "redux-devtools": "^3.5.0",
     "redux-devtools-dock-monitor": "~1.1.3",
     "redux-devtools-log-monitor": "~1.4.0",
     "redux-logger": "~3.0.6",
     "redux-saga-tester": "~1.0.379",
     "redux-testkit": "~1.0.6",
     "style-loader": "~0.23.0",
-    "webpack": "^4.26.1",
+    "webpack": "^4.28.2",
     "webpack-bundle-analyzer": "~3.0.1",
     "webpack-cli": "~3.1.0",
-    "webpack-dev-server": "~3.1.8",
-    "webpack-merge": "~4.1.4"
+    "webpack-dev-server": "^3.1.13",
+    "webpack-merge": "^4.1.5"
   },
-  "_flowComment": "NOTE: for flow add also flow-bin, flow-typed and babel-preset-flow",
-  "_webpackServe": "TODO: replace webpack-dev-server with webpack-serve?"
+  "_flowComment": "NOTE: for flow add also flow-bin, flow-typed and babel-preset-flow"
 }
