--- a/client/package.json
+++ b/client/package.json
@@ -17,18 +17,19 @@
     ]
   },
   "dependencies": {
-    "@babel/polyfill": "^7.0.0",
-    "@material-ui/core": "^3.6.0",
+    "@babel/polyfill": "^7.2.5",
+    "@material-ui/core": "^3.7.1",
     "@material-ui/icons": "~3.0.1",
     "axios": "~0.18.0",
     "history": "~4.7.2",
-    "immutability-helper": "^2.8.1",
+    "immutability-helper": "^2.9.0",
     "lodash": "~4.17.10",
     "prop-types": "~15.6.2",
-    "query-string": "^5.1.1",
+    "query-string": "^6.2.0",
     "raven-js": "~3.27.0",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-hot-loader": "^4.6.3",
     "react-loadable": "~5.5.0",
     "react-redux": "^5.1.1",
     "react-router-dom": "~4.3.1",
@@ -36,31 +37,31 @@
     "redux": "~4.0.0",
     "redux-actions": "~2.6.1",
     "redux-saga": "~0.16.0",
-    "styled-components": "^4.1.1",
-    "uglifyjs-webpack-plugin": "^2.0.1"
+    "styled-components": "^4.1.3",
+    "uglifyjs-webpack-plugin": "^2.1.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
-    "@babel/plugin-proposal-decorators": "^7.0.0",
-    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
-    "@babel/plugin-proposal-function-sent": "^7.0.0",
-    "@babel/plugin-proposal-json-strings": "^7.0.0",
-    "@babel/plugin-proposal-numeric-separator": "^7.0.0",
-    "@babel/plugin-proposal-throw-expressions": "^7.0.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/plugin-syntax-import-meta": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "@babel/plugin-proposal-decorators": "^7.2.3",
+    "@babel/plugin-proposal-export-namespace-from": "^7.2.0",
+    "@babel/plugin-proposal-function-sent": "^7.2.0",
+    "@babel/plugin-proposal-json-strings": "^7.2.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.2.0",
+    "@babel/plugin-proposal-throw-expressions": "^7.2.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-syntax-import-meta": "^7.2.0",
+    "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.4.2",
     "babel-loader": "^8.0.4",
     "babel-plugin-react-transform": "^3.0.0",
-    "babel-plugin-styled-components": "^1.6.4",
-    "css-loader": "^1.0.0",
-    "eslint": "^5.5.0",
+    "babel-plugin-styled-components": "^1.10.0",
+    "css-loader": "^2.0.2",
+    "eslint": "^5.10.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-prettier": "^3.0.1",
@@ -70,26 +71,24 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
-    "file-loader": "^2.0.0",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "~3.2.0",
     "jest": "^23.6.0",
     "json-loader": "~0.5.7",
-    "prettier": "^1.14.2",
+    "prettier": "^1.15.3",
     "pretty-quick": "^1.6.0",
-    "react-hot-loader": "^4.3.6",
-    "redux-devtools": "~3.4.1",
+    "redux-devtools": "^3.5.0",
     "redux-devtools-dock-monitor": "~1.1.3",
     "redux-devtools-log-monitor": "~1.4.0",
     "redux-logger": "~3.0.6",
     "redux-saga-tester": "~1.0.379",
     "redux-testkit": "~1.0.6",
     "style-loader": "^0.23.0",
-    "webpack": "^4.18.0",
+    "webpack": "^4.28.2",
     "webpack-bundle-analyzer": "^3.0.1",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "~3.1.4",
-    "webpack-merge": "~4.1.2"
+    "webpack-dev-server": "^3.1.13",
+    "webpack-merge": "^4.1.5"
   },
-  "_flowComment": "NOTE: for flow add also flow-bin, flow-typed and babel-preset-flow",
-  "_webpackServe": "TODO: replace webpack-dev-server with webpack-serve?"
+  "_flowComment": "NOTE: for flow add also flow-bin, flow-typed and babel-preset-flow"
 }
