--- a/admin/config/nginx.conf
+++ b/admin/config/nginx.conf
@@ -20,10 +20,10 @@ http {
         server_name             localhost;
 
         # Serve static files
-        root                    /build;
+        root                    /service;
         index                   index.html;
 
-        client_max_body_size    32m;
+        client_max_body_size    1m;
 
         error_page 404 =200     /index.html;
         error_page              500 502 503 504  /50x.html;
