--- a/client/Dockerfile.build
+++ b/client/Dockerfile.build
@@ -27,10 +27,10 @@ LABEL version=${BUILD_VERSION} \
       company=companyname \
       project=server-template \
       role=client
-WORKDIR /build
+WORKDIR /service
 COPY --from=builder /build .
 RUN chown -R nginx:nginx /var/cache/nginx && \
-    chown -R nginx:nginx /build && \
+    chown -R nginx:nginx /service && \
     mv /etc/nginx/nginx.conf /etc/nginx/nginx.conf.orig
 COPY ./config/nginx.conf /etc/nginx
 # EXAMPLE: COPY ./config/.htpasswd /etc/nginx
