chore: prevent creation of flow-typed directory if flow not in use

--- a/docker-compose-test.yaml
+++ b/docker-compose-test.yaml
@@ -12,7 +12,8 @@ services:
       - "./server:/service"
       - "./shared:/service/shared"
       - "/service/node_modules"
-      - "/service/flow-typed/npm"
+      # NOTE: for flow
+      # - "/service/flow-typed/npm"
     networks:
       - test
     depends_on:
