--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "test:server": "taito util-test:server:${taito_env}",
     "test:worker": "echo DISABLED taito util-test:worker:${taito_env}",
     "test:www": "echo DISABLED taito util-test:www:${taito_env}",
+    "taito-host-cypress": "npm run taito-host-cypress:client",
+    "taito-host-cypress:client": "cd client && DATABASE_PASSWORD=$test_all_DATABASE_PASSWORD npm run cypress:open",
+    "taito-host-cypress:admin": "cd admin && DATABASE_PASSWORD=$test_all_DATABASE_PASSWORD npm run cypress:open",
     "_check-deps_comment": "TODO how to pass -u argument from check-deps to check-deps:TARGET?",
     "check-deps": "npm-run-all \"check-deps:root {@}\" \"check-deps:admin {@}\" \"check-deps:client {@}\" \"check-deps:graphql {@}\" \"check-deps:server {@}\" \"check-deps:worker {@}\" \"check-deps:www {@}\" -- ",
     "check-deps:root": "npm run _check-deps-script -- . ",
