--- a/admin/.eslintrc.yml
+++ b/admin/.eslintrc.yml
@@ -1,5 +1,7 @@
 extends:
   - airbnb # TODO use airbnb-base instead?
+  # TODO: get recommended settings also from other plugins
+  # TODO: use plugin recommendations instead of airbnb?
   # NOTE: prettier disabled: https://github.com/prettier/prettier/issues/3437
   # - prettier
 
@@ -14,12 +16,15 @@ parser: 'babel-eslint'
 parserOptions:
   ecmaVersion: 2017
 
-# NOTE: prettier disabled: https://github.com/prettier/prettier/issues/3437
-# plugins:
-#   - prettier
+plugins:
+  - chai-friendly
+  # TODO: add more plugins? (see package.json dependencies)
+  # NOTE: prettier disabled: https://github.com/prettier/prettier/issues/3437
+  # - prettier
 
 # 0: off, 1: warning, 2: error
 rules:
+  # TODO: replace these custom rules with plugin recommendations
   # NOTE: prettier disabled: https://github.com/prettier/prettier/issues/3437
   # prettier/prettier:
   #   - error
@@ -51,6 +56,9 @@ rules:
   # console is fine
   no-console: 0
   import/prefer-default-export: 0
+
+  # disable no-unused-expressions for chai
+  chai-friendly/no-unused-expressions: 2
 
   # allow return assign to keep simple arrow functions concise
   no-return-assign: 0
