--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,6 +1,10 @@
 node_modules
 flow-typed/npm
 test/reports
+test/screenshots
+test/videos
+test/db.json
+shared
 credentials
 *.log
 .DS_Store
@@ -9,6 +13,3 @@ _build_git
 build
 *.swp
 .vscode
-
-# Shared directory
-shared
