--- a/client/Dockerfile.build
+++ b/client/Dockerfile.build
@@ -1,5 +1,5 @@
 # Builder and tester container for production build
-FROM node:10-alpine as builder
+FROM taitounited/cypress:3.14-node10 as builder
 ARG SERVICE_DIR=.
 ARG TARGET_ENV=prod
 ARG BUILD_VERSION
