--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,9 @@
     "pretty-quick": "pretty-quick",
     "lint": "eslint . --ignore-path .eslintignore --quiet",
     "unit": "echo TODO BABEL_ENV=test jest",
+    "test": "echo TODO run tests but not cypress",
+    "cypress:run": "cypress run -s test/integration/**/${test_name}.spec.js",
+    "cypress:open": "cypress open",
     "start": "NODE_ENV=development webpack-dev-server --config ./config/webpack.dev.js --public=localhost:9999",
     "build": "NODE_ENV=production webpack -p --config ./config/webpack.prod.js --mode production",
     "analyze": "ANALYZE=true NODE_ENV=production webpack -p --config ./config/webpack.prod.js"
@@ -61,12 +64,15 @@
     "babel-plugin-react-transform": "^3.0.0",
     "babel-plugin-styled-components": "^1.10.0",
     "css-loader": "^2.0.2",
+    "cypress": "^3.1.4",
     "eslint": "^5.10.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-prettier": "^3.0.1",
     "eslint-loader": "^2.1.0",
     "eslint-plugin-babel": "^5.2.0",
+    "eslint-plugin-chai-friendly": "^0.4.1",
+    "eslint-plugin-cypress": "^2.2.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-prettier": "^3.0.0",
@@ -75,6 +81,7 @@
     "html-webpack-plugin": "~3.2.0",
     "jest": "^23.6.0",
     "json-loader": "~0.5.7",
+    "pg-promise": "^8.5.4",
     "prettier": "^1.15.3",
     "pretty-quick": "^1.6.0",
     "redux-devtools": "^3.5.0",
