--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -48,6 +48,13 @@ services:
       - "/service/node_modules"
       # NOTE: for flow
       # - "/service/flow-typed/npm"
+    environment:
+      # NOTE: Database connection is for tests only
+      DATABASE_HOST: server-template-database
+      DATABASE_NAME: server_template_local
+      DATABASE_USER: server_template_local_app
+      DATABASE_PASSWORD: secret
+
   # client end
 
   # graphql start
