--- a/docker-nginx.conf
+++ b/docker-nginx.conf
@@ -62,6 +62,40 @@ http {
         }
         # server end
 
+        # storage start
+        # Forward /minio to storage
+        location /minio {
+            proxy_pass http://server-template-storage:9000;
+            proxy_http_version 1.1;
+
+            proxy_redirect off;
+
+            # Headers
+            proxy_set_header X-Real-IP  $remote_addr;
+            proxy_set_header X-Forwarded-For $remote_addr;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $http_host;
+            proxy_cache_bypass $http_upgrade;
+        }
+        # Forward /bucket to storage
+        location /bucket {
+            proxy_pass http://server-template-storage:9000;
+            proxy_http_version 1.1;
+
+            proxy_buffering off;
+            proxy_redirect off;
+
+            # Headers
+            proxy_set_header X-Real-IP  $remote_addr;
+            proxy_set_header X-Forwarded-For $remote_addr;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $http_host;
+            proxy_cache_bypass $http_upgrade;
+        }
+        # storage end
+
         # www start
         # Forward /www to www
         # location /www {
