--- a/scripts/helm.yaml
+++ b/scripts/helm.yaml
@@ -31,6 +31,7 @@ server-template:
 
   # Defaults
   serviceDefaults:
+    image: # 3rd party container image
     path:
     port: 8080
     livenessPath: /healthz
@@ -39,7 +40,6 @@ server-template:
     minReplicas: 2
     maxReplicas: 5
     targetCPUUtilizationPercentage: 50
-    image: # 3rd party container image
     env:
       # Environment variables
       COMMON_ENV: ${taito_env}
@@ -70,7 +70,11 @@ server-template:
       API_HOST: ${taito_project}-${taito_env}-server
       API_PORT: '8080'
 
-  # TODO queue
+  cache:
+    image: redis:alpine
+    port: 6397
+    tier: backend
+    livenessDisabled: true # TODO remove
 
   server:
     path: /api
@@ -95,7 +99,7 @@ server-template:
       DATABASE_USER: ${db_database_name}_app
       DATABASE_POOL_MIN: '5'
       DATABASE_POOL_MAX: '10'
-      S3_URL: http://${taito_project}-storage:9000/
+      S3_URL: http://${taito_project}-${taito_env}-storage:9000/
       S3_REGION: ${taito_provider_region}
       S3_BUCKET: ${taito_project}-${taito_env}
       S3_KEY_ID: 070UEOQR6LX4YPZLFU0V
@@ -109,12 +113,10 @@ server-template:
     #       - date; echo Hello from server
 
   storage:
+    image: minio/minio
     port: 9000
     tier: backend
-    livenessDisabled: true # TODO remove
-    image: minio/minio
-    host: storage
-    region: ${taito_provider_region}
+    livenessPath: /minio/health/ready
     command:
       - minio
       - gateway
