chore: cypress for admin

--- a/admin/Dockerfile
+++ b/admin/Dockerfile
@@ -1,6 +1,6 @@
 # Builder, tester and runtime container for local development
 # NOTE: npm libraries are installed inside container to speed up build
-FROM node:10-alpine
+FROM taitounited/cypress:3.14-node10
 ARG SERVICE_DIR=.
 WORKDIR /service
 COPY ${SERVICE_DIR}/package.json \
@@ -9,7 +9,7 @@ COPY ${SERVICE_DIR}/package.json \
      /service/
 ENV NODE_ENV development
 ENV API_ROOT ''
-ENV API_URL '/api'
+ENV API_URL /api
 RUN npm install --loglevel warn
 RUN npm run types-install
 EXPOSE 8080
