--- a/scripts/helm/charts/server-template/templates/cronjob.yaml
+++ b/scripts/helm/charts/server-template/templates/cronjob.yaml
@@ -39,7 +39,7 @@ spec:
               {{- else }}
               image: {{ $global.registry -}} / {{- $serviceName -}} : {{- $global.build.imageTag }}
               {{- end }}
-              imagePullPolicy: {{ $root.Values.imagePullPolicy | quote }}
+              imagePullPolicy: {{ $global.imagePullPolicy | quote }}
               {{- if $job.command }}
               command:
                 {{- range $job.command }}
