--- a/scripts/helm/charts/server-template/templates/deployment.yaml
+++ b/scripts/helm/charts/server-template/templates/deployment.yaml
@@ -61,7 +61,7 @@ spec:
           {{- else }}
           image: {{ $global.registry -}} / {{- $serviceName -}} : {{- $global.build.imageTag }}
           {{- end }}
-          imagePullPolicy: {{ $root.Values.imagePullPolicy | quote }}
+          imagePullPolicy: {{ $global.imagePullPolicy | quote }}
           {{- if .command }}
           command:
             {{- range .command }}
