feat: add COMMON_DOMAIN and COMMON_URL

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -77,6 +77,8 @@ services:
     environment:
       COMMON_COMPANY: companyname
       COMMON_PROJECT: server-template
+      COMMON_DOMAIN: localhost
+      COMMON_URL: http://localhost:9999
       COMMON_DEBUG: 'false'
       COMMON_LOG_FORMAT: text
       COMMON_LOG_LEVEL: info      # trace, debug, info, warn, error, fatal
