--- a/scripts/helm.yaml
+++ b/scripts/helm.yaml
@@ -1,4 +1,6 @@
 global:
+  domain: ${taito_domain}
+  url: https://${taito_domain}
   logFormat: stackdriver
   logLevel: info    # trace, debug, info, warn, error, fatal
   registry: ${taito_image_registry}
